--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,15 +24,16 @@ jobs:
           if [[ ${GITHUB_REF##*/} =~ ^v[0-9]\.[0-9]\.[0-9]$ ]];
           then
               draft_release=false
+          
           elif [[ ${GITHUB_REF##*/} =~ ^v[0-9]\.[0-9]\.[0-9]+(-(alpha|beta|rc)(\.[0-9]+)?)?(\+[A-Za-z0-9.]+)?$ ]];
           then
               draft_release=true
           else
               echo "Existing, github ref needs to be a tag with format vx.y.z or vx.y.z+(alpha|beta|rc)"
-              exit 1;
+              exit 1
 
           echo "::set-output name=draft_release::${draft_release}"
-          echo "::set-output name=tag::${draft_release}"
+          echo "::set-output name=tag::$${GITHUB_REF##*/}"
 
   run_build_workflow:
     runs-on: ubuntu-latest
