--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -131,8 +131,8 @@ jobs:
   build-and-cache-assembly:
     needs:
       - initiate
-      - test
-      - integration-test
+      # - test
+      # - integration-test
     timeout-minutes: 30
     runs-on: ubuntu-latest
     strategy:
@@ -207,7 +207,7 @@ jobs:
   upload-assembly:
     needs:
       - initiate
-      - functional-test
+      # - functional-test
     timeout-minutes: 30
     runs-on: ubuntu-latest
     strategy:
