--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  validate_tag:
+  validate-tag:
     runs-on: ubuntu-latest
     outputs:
       draft_release: ${{ steps.get_tag.outputs.draft_release }}
@@ -36,24 +36,42 @@ jobs:
           echo "::set-output name=draft_release::${draft_release}"
           echo "::set-output name=tag::$${GITHUB_REF##*/}"
 
-  run_build_workflow:
-    needs: validate_tag
+  build:
+    needs: validate-tag
     uses: ./.github/workflows/build.yml
+    with:
+      version: ${{ needs.validate-tag.outputs.tag }}
     secrets: inherit
 
-  release_to_github:
+  release:
     runs-on: ubuntu-latest
     needs:
-      - validate_tag
-      - run_build_workflow
+      - validate-tag
+      - build
     env:
-      DRAFT_RELEASE: '${{ needs.validate_tag.outputs.draft_release }}'
-      TAG: '${{ needs.validate_tag.outputs.tag }}'
+      DRAFT_RELEASE: '${{ needs.validate-tag.outputs.draft_release }}'
+      TAG: '${{ needs.validate-tag.outputs.tag }}'
     steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
         with:
-          path: /tmp/artifacts/
+          java-version: '8'
+          distribution: 'adopt'
+
+      - name: Cache SBT
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.ivy2/cache
+            ~/.sbt
+          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
+
+      - name: Cache assembly
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/**/target/**/libs/*.jar
+          key: ${{ runner.os }}-assembly-${{ matrix.module }}-${{ github.run_id }}
 
       - name: Release
         uses: softprops/action-gh-release@v1
@@ -62,4 +80,4 @@ jobs:
           fail_on_unmatched_files: true
           name: 'Stream Reactor ${{ env.TAG }}'
           files: |
-            /tmp/artifacts/*
+            ~/**/target/**/libs/*.jar
