--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,10 @@ on:
       version:
         required: true
         type: string
+    outputs:
+      modules:
+        description: "Stream reactor collection of modules"
+        value: ${{ jobs.initiate.outputs.matrix }}
 
 jobs:
   get-version:
@@ -234,38 +238,38 @@ jobs:
 #          check_name: ${{ matrix.module }}-fun-results
 #          comment_mode: off
 
-  upload-assembly:
-    needs:
-      - initiate
-      - build-and-cache-assembly
-      # - functional-test
-    timeout-minutes: 30
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        module: ${{fromJSON(needs.initiate.outputs.matrix)}}
-    steps:
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: '8'
-          distribution: 'adopt'
-      - name: Cache SBT
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.ivy2/cache
-            ~/.sbt
-          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
-      - name: Cache assembly
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/**/target/**/libs/*.jar
-          key: ${{ runner.os }}-assembly-${{ matrix.module }}-${{ github.run_id }}
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: assembly-${{ matrix.module }}-${{ github.run_id }}
-          path: ~/**/target/**/libs/*.jar
+#  upload-assembly:
+#    needs:
+#      - initiate
+#      - build-and-cache-assembly
+#      # - functional-test
+#    timeout-minutes: 30
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        module: ${{fromJSON(needs.initiate.outputs.matrix)}}
+#    steps:
+#      - name: Set up JDK 8
+#        uses: actions/setup-java@v2
+#        with:
+#          java-version: '8'
+#          distribution: 'adopt'
+#      - name: Cache SBT
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.ivy2/cache
+#            ~/.sbt
+#          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
+#      - name: Cache assembly
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/**/target/**/libs/*.jar
+#          key: ${{ runner.os }}-assembly-${{ matrix.module }}-${{ github.run_id }}
+#
+#      - name: Upload artifact
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: assembly-${{ matrix.module }}-${{ github.run_id }}
+#          path: ~/**/target/**/libs/*.jar
