--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Publish New Release
 
 on:
   push:
-    tags: "v*"
+    tags: "*"
   workflow_dispatch:
 
 jobs:
@@ -21,36 +21,58 @@ jobs:
         shell: bash
         id: get_tag
         run: |
-          if [[ ${GITHUB_REF##*/} =~ ^v[0-9]\.[0-9]\.[0-9]$ ]];
+          tag=${GITHUB_REF##*/:1}
+          echo $tag
+
+          if [[ ${GITHUB_REF##*/} =~ ^[0-9]\.[0-9]\.[0-9]$ ]];
           then
               draft_release=false
           
-          elif [[ ${GITHUB_REF##*/} =~ ^v[0-9]\.[0-9]\.[0-9]+(-(alpha|beta|rc)(\.[0-9]+)?)?(\+[A-Za-z0-9.]+)?$ ]];
+          elif [[ ${GITHUB_REF##*/} =~ ^[0-9]\.[0-9]\.[0-9]+(-(alpha|beta|rc)(\.[0-9]+)?)?(\+[A-Za-z0-9.]+)?$ ]];
           then
               draft_release=true
           else
-              echo "Existing, github ref needs to be a tag with format vx.y.z or vx.y.z+(alpha|beta|rc)"
+              echo "Existing, github ref needs to be a tag with format x.y.z or x.y.z+(alpha|beta|rc)"
               exit 1
           fi
 
-          echo "::set-output name=draft_release::${draft_release}"
-          echo "::set-output name=tag::$${GITHUB_REF##*/}"
+          echo "::set-output name=draft_release::$draft_release"
+          echo "::set-output name=tag::$          tag"
 
   build:
-    needs: validate-tag
+    needs:
+      - validate-tag
     uses: ./.github/workflows/build.yml
     with:
-      version: ${{ needs.validate-tag.outputs.tag }}
+      version: "${{ needs.validate-tag.outputs.tag }}"
     secrets: inherit
 
-  release:
+  create-release:
+    runs-on: ubuntu-latest
+    env:
+      DRAFT_RELEASE: '${{ needs.validate-tag.outputs.draft_release }}'
+      TAG: '${{ needs.validate-tag.outputs.tag }}'
+    needs:
+      - validate-tag
+      - build
+    steps:
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          draft: '${{ env.DRAFT_RELEASE }}'
+          name: 'Stream Reactor ${{ env.TAG }}'
+
+  upload-assets-to-release:
     runs-on: ubuntu-latest
     needs:
       - validate-tag
       - build
+    strategy:
+      matrix:
+        module: ${{fromJSON(needs.build.outputs.module)}}
     env:
-      DRAFT_RELEASE: '${{ needs.validate-tag.outputs.draft_release }}'
-      TAG: '${{ needs.validate-tag.outputs.tag }}'
+      TAG: ${{ needs.validate-tag.outputs.tag }}
+
     steps:
       - name: Set up JDK 8
         uses: actions/setup-java@v2
@@ -73,11 +95,26 @@ jobs:
             ~/**/target/**/libs/*.jar
           key: ${{ runner.os }}-assembly-${{ matrix.module }}-${{ github.run_id }}
 
-      - name: Release
-        uses: softprops/action-gh-release@v1
+      - name: Package Connector
+        shell: bash
+        run: |
+          FOLDER=kafka-connect-$-${{ matrix.module }}-${{ env.TAG }}
+          mkdir -p $FOLDER
+          cp **/target/**/libs/*.jar LICENSE $FOLDER/
+          zip -r "$FOLDER.zip" $FOLDER/
+
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
         with:
-          draft: '${{ env.DRAFT_RELEASE }}'
-          fail_on_unmatched_files: true
-          name: 'Stream Reactor ${{ env.TAG }}'
-          files: |
-            ~/**/target/**/libs/*.jar
+          file: kafka-connect-$-${{ matrix.module }}-${{ env.TAG }}.zip
+          asset_name: "kafka-connect-${{ matrix.module }}-${{ env.TAG }}"
+          release_name: 'Stream Reactor ${{ env.TAG }}'
+
+#      - name: Create Release
+#        uses: softprops/action-gh-release@v1
+#        with:
+#          draft: '${{ env.DRAFT_RELEASE }}'
+#          #fail_on_unmatched_files: true
+#          name: 'Stream Reactor ${{ env.TAG }}'
+#          # files: |
+#          #  ~/**/target/**/libs/*.jar
