--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
         shell: bash
         id: get_tag
         run: |
-          tag=${GITHUB_REF##*/:1}
+          tag=${GITHUB_REF##*/}
           echo $tag
 
           if [[ ${GITHUB_REF##*/} =~ ^[0-9]\.[0-9]\.[0-9]$ ]];
@@ -75,6 +75,9 @@ jobs:
       TAG: ${{ needs.validate-tag.outputs.tag }}
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
@@ -110,12 +113,3 @@ jobs:
           file: kafka-connect-$-${{ matrix.module }}-${{ env.TAG }}.zip
           asset_name: "kafka-connect-${{ matrix.module }}-${{ env.TAG }}"
           release_name: 'Stream Reactor ${{ env.TAG }}'
-
-#      - name: Create Release
-#        uses: softprops/action-gh-release@v1
-#        with:
-#          draft: '${{ env.DRAFT_RELEASE }}'
-#          #fail_on_unmatched_files: true
-#          name: 'Stream Reactor ${{ env.TAG }}'
-#          # files: |
-#          #  ~/**/target/**/libs/*.jar
