--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,8 @@ name: Publish New Release
 
 on:
   push:
-    tags: "*"
+    tags:
+      - "*"
   workflow_dispatch:
 
 jobs:
@@ -21,9 +22,6 @@ jobs:
         shell: bash
         id: get_tag
         run: |
-          tag=${GITHUB_REF##*/}
-          echo $tag
-
           if [[ ${GITHUB_REF##*/} =~ ^[0-9]\.[0-9]\.[0-9]$ ]];
           then
               draft_release=false
@@ -35,9 +33,8 @@ jobs:
               echo "Existing, github ref needs to be a tag with format x.y.z or x.y.z+(alpha|beta|rc)"
               exit 1
           fi
-
           echo "::set-output name=draft_release::$draft_release"
-          echo "::set-output name=tag::$tag"
+          echo "::set-output name=tag::${GITHUB_REF##*/}"
 
   build:
     needs:
@@ -58,10 +55,10 @@ jobs:
     env:
       DRAFT_RELEASE: '${{ needs.validate-tag.outputs.draft_release }}'
       TAG: ${{ needs.validate-tag.outputs.tag }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
