--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,45 +125,45 @@ jobs:
           check_name: ${{ matrix.module }}-test-results
           comment_mode: off
 
-  integration-test:
-    needs: initiate
-    timeout-minutes: 30
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        module: ${{fromJSON(needs.initiate.outputs.it_matrix)}}
-    steps:
-      - uses: actions/checkout@master
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
-        with:
-          java-version: '8'
-          distribution: 'adopt'
-      - name: Cache SBT
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.ivy2/cache
-            ~/.sbt
-          key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
-      - name: Run tests
-        run: sbt "project ${{ matrix.module }}" it:test
-        env:
-          JVM_OPTS: -Xmx3200m
-      - name: Publish test results
-        uses: EnricoMi/publish-unit-test-result-action@v1
-        if: always()
-        with:
-          files: "**/target/**/it-reports/*.xml"
-          check_name: ${{ matrix.module }}-it-results
-          comment_mode: off
+  #integration-test:
+  #  needs: initiate
+  #  timeout-minutes: 30
+  #  runs-on: ubuntu-latest
+  #  strategy:
+  #    matrix:
+  #      module: ${{fromJSON(needs.initiate.outputs.it_matrix)}}
+  #  steps:
+  #    - uses: actions/checkout@master
+  #    - name: Set up JDK 8
+  #      uses: actions/setup-java@v2
+  #      with:
+  #        java-version: '8'
+  #        distribution: 'adopt'
+  #    - name: Cache SBT
+  #      uses: actions/cache@v3
+  #      with:
+  #        path: |
+  #          ~/.ivy2/cache
+  #          ~/.sbt
+  #        key: ${{ runner.os }}-sbt-${{ hashFiles('*.sbt') }}-${{ hashFiles('project/**') }}
+  #    - name: Run tests
+  #      run: sbt "project ${{ matrix.module }}" it:test
+  #      env:
+  #        JVM_OPTS: -Xmx3200m
+  #    - name: Publish test results
+  #      uses: EnricoMi/publish-unit-test-result-action@v1
+  #      if: always()
+  #      with:
+  #        files: "**/target/**/it-reports/*.xml"
+  #        check_name: ${{ matrix.module }}-it-results
+  #        comment_mode: off
 
   build-and-cache-assembly:
     needs:
       - initiate
       - get-version
       - test
-      - integration-test
+      # - integration-test
     timeout-minutes: 30
     runs-on: ubuntu-latest
     strategy:
