--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Read modules lists
         id: read-mods
         run: |
-          echo '::set-output name=matrix::["aws-s3-kafka-2-8","aws-s3-kafka-3-1"]'
+          echo "::set-output name=matrix::$(cat ./target/scala-2.13/resource_managed/main/modules.txt)"
           echo "::set-output name=it-matrix::$(cat ./target/scala-2.13/resource_managed/main/it-modules.txt)"
           echo "::set-output name=fun-matrix::$(cat ./target/scala-2.13/resource_managed/main/fun-modules.txt)"
       - name: Cleanup before cache
@@ -182,6 +182,7 @@ jobs:
           else
              echo "::set-output name=version::$(git describe --tags --always)"
           fi
+
       - name: Build assembly
         env:
           JVM_OPTS: -Xmx3200m
